# chassis-projects

cpp/cpp14/: CMakeLists.txt
cpp/cpp14/cmake/: CodeCoverage.cmake
cpp/cpp14/include/: AnalogSensor.hpp
cpp/cpp14/src/: AnalogSensor.cpp  main.cpp
cpp/cpp14/ut/: main.cpp  test.cpp
cpp/cpp17/cmake/: CodeCoverage.cmake
cpp/cpp17/src/: AnalogSensor.cpp  main.cpp
cpp/cpp17/ut/: CMakeLists.txt  main.cpp  test.cpp
docker/busybox/: Dockerfile  docker-lint.yaml
env/git/: config
env/git/hooks/: pre-commit-pretty
env/git/tools/: merge-p4merge
env/sanity/: pretty
go/hss/cmproxy/: Gopkg.toml  README.md
go/nef-nrfintegration/: .dockerignore  Dockerfile  README.md  go.mod  go.sum  mason2wip.groovy
go/nef-nrfintegration/cmd/: docker.sh  helm.sh
go/nef-nrfintegration/src/: configmap.go  configmap_test.go  healthz.go  healthz_test.go  main.go  main_test.go  nefservice.go  nefservice_test.go  nrfagent.go  nrfagent_test.go
go/nef-nrfintegration/ssh/: id_rsa  id_rsa.pub  known_hosts
helm/eric-nef-release/: Chart.yaml  requirements.yaml  values.yaml
integration/eric_nrf/: Jenkinsfile.prepare  Jenkinsfile.promote_ms  Jenkinsfile.publish  Jenkinsfile.test  README.md  cm_init_config.json  common.sh  deploy_nrf.sh  values_adp_minikube.yaml
integration/nrf_common/: Jenkinsfile  README.md
integration/nrf_dbproxy/: Dockerfile.runtime  Makefile  start_dbproxy.sh
java/: build.gradle  gradle.properties  pom.xml
munin/: dependencies.yaml  encryptions.yaml  foss.usage.yaml  product_structure.yaml
python/PySample/: .gitignore  README.txt  requirements.txt
python/PySample-unit/: .flake8  setup.py
scripts/common/: common_git_func.sh  common_shell_func.sh
(+995 files in other folders)
